@@ -22,7 +22,7 @@ class TagModel : public QAbstractTableModel
 		QVariant data(const QModelIndex &index, int role) const;
 		QVariant headerData(int section, Qt::Orientation orientation, int role = Qt::DisplayRole) const;
 		Qt::ItemFlags flags(const QModelIndex &index) const;
-		bool setData(const QModelIndex &index, const QVariant &value, int role = Qt::EditRole); 
+		bool setData(const QModelIndex &index, const QVariant &value, int role = Qt::EditRole);
 	private:
 		MainWindow* Main;
 		std::vector<MapFeature*> theFeatures;
