@@ -1,4 +1,5 @@
 v0.10
+	* ADD : "created_by" to new features
 	* ADD : navigation: view -> bookmark + add/remove
 	* FIX : warn when OSM userid/password not set
 	* ADD : Export viewport to OSM
